@@ -25,6 +25,11 @@ final class WooWallet {
      * @var Woo_Wallet_Wallet 
      */
     public $wallet = null;
+    /**
+     * Wallet REST API
+     * @var WooWallet_API 
+     */
+    public $rest_api = null;
 
     /**
      * Main instance
@@ -169,7 +174,9 @@ final class WooWallet {
 
     public function woocommerce_loaded_callback() {
         include_once WOO_WALLET_ABSPATH . 'includes/abstracts/abstract-woo-wallet-actions.php';
-        require_once(WOO_WALLET_ABSPATH . 'includes/class-woo-wallet-actions.php');
+        require_once WOO_WALLET_ABSPATH . 'includes/class-woo-wallet-actions.php';
+        include_once WOO_WALLET_ABSPATH . '/includes/class-woo-wallet-api.php';
+        $this->rest_api = new WooWallet_API();
     }
 
     /**
